--- a/f1.css
+++ b/f1.css
@@ -5,33 +5,47 @@
 }
 
 header{
-    background-color: white;
+    background-color: rgb(139, 0, 0);
     display: flex;
     justify-content: center;
-}
-
-.encabezado{
-    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.596);
+  }
+  
+  .logo{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 70%;
-}
-
-.enlaces{
-    display: flex;
-    gap: 30px;
-
-}
-
-.enlaces a{
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-}
-
-.enlaces a:hover{
-    color: red;
-    transition: .4s ease;
-}
+    }
+    
+    .logo img{
+    height: 100px;
+    margin-left: 200px;
+    
+    }
+    
+    .encabezado{
+        padding: 20px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 70%;
+    }
+    
+    .enlaces{
+        display: flex;
+        gap: 30px;
+    
+    }
+    
+    .enlaces a{
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+        font-family: "Josefin Sans", sans-serif;
+        font-weight: bold;
+        padding: 20px;
+        font-size: 19px;
+        text-shadow: 3px 3px 2px rgba(41, 41, 41, 0.74);
+    }
+    
+    .enlaces a:hover{
+        color: rgb(199, 0, 0);
+        transition: .4s ease;
+    }
