--- a/galeria.css
+++ b/galeria.css
@@ -1,37 +1,117 @@
-*{
-    padding: 0;
+body{
     margin: 0;
-    box-sizing: border-box;
 }
 
 header{
-    background-color: white;
+    background-color: rgb(139, 0, 0);
     display: flex;
     justify-content: center;
-}
-
-.encabezado{
-    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.596);
+  }
+  
+  .logo{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 70%;
-}
+    }
+    
+    .logo img{
+    height: 100px;
+    margin-left: 200px;
+    
+    }
+    
+    .encabezado{
+        padding: 20px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 70%;
+    }
+    
+    .enlaces{
+        display: flex;
+        gap: 30px;
+    
+    }
+    
+    .enlaces a{
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+        font-family: "Josefin Sans", sans-serif;
+        font-weight: bold;
+        padding: 20px;
+        font-size: 19px;
+        text-shadow: 3px 3px 2px rgba(41, 41, 41, 0.74);
+    }
+    
+    .enlaces a:hover{
+        color: rgb(199, 0, 0);
+        transition: .4s ease;
+    }
 
-.enlaces{
-    display: flex;
-    gap: 30px;
+.container{
+    margin: auto;
+    width: 800px;
+    padding: 30px;
+   
+  }
+  
+  ul, li {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+  }
+  
+  ul.slider{
+    position: relative;
+    width: 800px;
+    height: 300px;
+  }
+  
+  ul.slider li {
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      opacity: 0;
+      width: inherit;
+      height: inherit;
+      transition: opacity .5s;
+      background:#ffffff;
+  }
+  
+  ul.slider li img{
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+    
 
-}
-
-.enlaces a{
+  }
+  
+  ul.slider li:first-child {
+      opacity: 1; 
+  }
+  
+  ul.slider li:target {
+      opacity: 1; 
+  }
+  
+  .menu{
+    text-align: center;
+    margin: 165px;
+  }
+  
+  .menu li{
+    display: inline-block;
+    text-align: center;
+  }
+  
+  .menu li a{
+    display: inline-block;
+    color: white;
     text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-}
-
-.enlaces a:hover{
-    color: red;
-    transition: .4s ease;
-}
+    background-color: rgb(160, 0, 0);
+    padding: 5px;
+    width: 15px;
+    height: 15px;
+    font-size: 15px;
+    border-radius: 100%;
+  }
