--- a/inicio.css
+++ b/inicio.css
@@ -1,79 +1,34 @@
-
-*{
-    padding: 0;
+body{
+    font-family: Arial, sans-serif;
+    line-height: 1;
     margin: 0;
+    padding: 300px;
+    background-image: url(img/fondo.jpg);
+    background-size: cover;
+    background-position: center ;
+    background-repeat: no-repeat;
+    color: #080808;
 }
 
-.container{
-    margin: auto;
-    background-color: white;
-    width: 800px;
-    padding: 30px;
-  }
-  
-  ul, li {
-      padding: 0;
-      margin: 0;
-      list-style: none;
-  }
-  
-  ul.slider{
-    position: relative;
-    width: 800px;
-    height: 300px;
-  }
-  
-  ul.slider li {
-      position: absolute;
-      left: 0px;
-      top: 0px;
-      opacity: 0;
-      width: inherit;
-      height: inherit;
-      transition: opacity .5s;
-      background:#fff;
-  }
-  
-  ul.slider li img{
-    width: 100%;
-    height: 450px;
-    object-fit: cover;
-  }
-  
-  ul.slider li:first-child {
-      opacity: 1; 
-  }
-  
-  ul.slider li:target {
-      opacity: 1; 
-  }
-  
-  .menu{
-    text-align: center;
-    margin: 165px;
-  }
-  
-  .menu li{
-    display: inline-block;
-    text-align: center;
-  }
-  
-  .menu li a{
-    display: inline-block;
-    color: white;
-    text-decoration: none;
-    background-color: rgb(160, 0, 0);
-    padding: 10px;
-    width: 15px;
-    height: 15px;
-    font-size: 15px;
-    border-radius: 100%;
-  }
-
 header{
-    background-color: white;
-    display: flex;
-    justify-content: center;
+  background-color: rgba(255, 255, 255, 0);
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  width: 100%; 
+  left: 0; 
+  top: 0; 
+}
+
+.logo{
+display: flex;
+}
+
+.logo img{
+height: 100px;
+margin-left: 200px;
+
+
 }
 
 .encabezado{
@@ -92,9 +47,12 @@ header{
 
 .enlaces a{
     text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(255, 255, 255);
+    font-family: "Josefin Sans", sans-serif;
     font-weight: bold;
+    padding: 20px;
+    font-size: 19px;
+    text-shadow: 3px 3px 2px rgba(41, 41, 41, 0.74);
 }
 
 .enlaces a:hover{
