--- a/galeria.css
+++ b/galeria.css
@@ -1,6 +1,14 @@
 body{
     margin: 0;
 }
+.contenido{
+  width: 80%;
+  margin: 0 auto;
+  padding: 1rem;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
 
 header{
     background-color: rgb(139, 0, 0);
@@ -82,7 +90,8 @@ header{
     width: 100%;
     height: 450px;
     object-fit: cover;
-    
+    margin-left: 120px;
+    padding: 20px;
 
   }
   
@@ -97,6 +106,7 @@ header{
   .menu{
     text-align: center;
     margin: 165px;
+    padding: 20px;
   }
   
   .menu li{
