--- a/inicio.css
+++ b/inicio.css
@@ -3,7 +3,8 @@ body{
     line-height: 1;
     margin: 0;
     padding: 300px;
-    background-image: url(img/fondo.jpg);
+    background-image: url(img/rb19.jpg);
+    background-attachment: fixed;
     background-size: cover;
     background-position: center ;
     background-repeat: no-repeat;
@@ -11,24 +12,23 @@ body{
 }
 
 header{
-  background-color: rgba(90, 90, 90, 0.24);
-  display: flex;
+  background-color: rgba(0, 0, 0, 0.144);
+  display: inline-flex;
   justify-content: center;
   position: fixed;
   width: 100%; 
   left: 0; 
   top: 0; 
+  height: 70px;
 }
 
 .logo{
-display: flex;
+display: inline-flex;
 }
 
 .logo img{
-height: 100px;
+height: 60px;
 margin-left: 200px;
-
-
 }
 
 .encabezado{
@@ -47,15 +47,58 @@ margin-left: 200px;
 
 .enlaces a{
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: rgb(218, 0, 0);
     font-family: "Josefin Sans", sans-serif;
     font-weight: bold;
     padding: 20px;
-    font-size: 19px;
-    text-shadow: 3px 3px 2px rgba(41, 41, 41, 0.74);
+    font-size: 15px;
+    text-shadow: 3px 3px 2px rgba(41, 41, 41, 0.199);
 }
 
 .enlaces a:hover{
-    color: rgb(199, 0, 0);
+    color: rgb(255, 255, 255);
     transition: .4s ease;
 }
+
+/*Footer*/
+footer{
+    background: fixed;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 10px;   
+}
+
+.contenido-footer{
+    width: 100%;
+    padding: 40px 0;
+    background-color: rgba(0, 0, 0, 0);
+    margin-top: 40px;
+    background-position: 0%;
+}
+
+.contenido-footer footer{
+    max-width: 1200px;
+    margin: auto;
+}
+
+.contenido-footer footer .redes-footer{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    
+}
+
+.contenido-footer footer .redes-footer .iconos{
+    font-size: 20px;
+    margin: 20px;
+    background: rgb(107, 0, 0);
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    color: white;
+}
+
