--- a/galeria.css
+++ b/galeria.css
@@ -24,7 +24,7 @@ header{
     
     .logo img{
       height: 60px;
-      margin-left: 200px;
+      margin-left: 250px;
       }
     
     .encabezado{
@@ -38,6 +38,7 @@ header{
     .enlaces{
         display: flex;
         gap: 30px;
+        margin-right: 30px;
     
     }
     
