--- a/inicio.css
+++ b/inicio.css
@@ -1,18 +1,10 @@
 body{
     font-family: Arial, sans-serif;
-    line-height: 1;
-    margin: 0;
-    padding: 300px;
-    background-image: url(img/rb19.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center ;
-    background-repeat: no-repeat;
-    color: #080808;
+    margin: 0%;
 }
 
 header{
-  background-color: rgba(0, 0, 0, 0.144);
+  background-color: rgb(255, 255, 255);
   display: inline-flex;
   justify-content: center;
   position: fixed;
@@ -22,13 +14,29 @@ header{
   height: 70px;
 }
 
+.imgfondo{
+    width: 100%;
+    height: auto;
+    position: absolute;
+    opacity: 0.7;
+    
+}
+
+.contenidocuerpo{
+    text-align: center;
+    padding: 150px;
+    color: rgb(0, 0, 0);
+    text-shadow: 3px 3px 2px rgba(41, 41, 41, 0.199);
+    
+}
+
 .logo{
 display: inline-flex;
 }
 
 .logo img{
 height: 60px;
-margin-left: 200px;
+margin-left: 250px;
 }
 
 .encabezado{
@@ -42,6 +50,7 @@ margin-left: 200px;
 .enlaces{
     display: flex;
     gap: 30px;
+    margin-right: 32px;
 
 }
 
@@ -56,7 +65,7 @@ margin-left: 200px;
 }
 
 .enlaces a:hover{
-    color: rgb(255, 255, 255);
+    color: rgba(155, 0, 0, 0.466);
     transition: .4s ease;
 }
 
